<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="end"
        android:text="@string/tvText"
        android:textColor="@color/red"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/evText"
        android:inputType="text"
        android:autofillHints="" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:switchMinWidth="100dp"
        android:text="@string/swText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:checked="true"
        android:layout_marginEnd="10dp"
        android:text="@string/cbText" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textColor="#455A64"
        android:textOff="@string/btOffString"
        android:textOn="@string/btOnString" />

    <Button
        android:id="@+id/openPersonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btText"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"/>


</LinearLayout>